--- a/src/Table.css
+++ b/src/Table.css
@@ -64,13 +64,15 @@ th {
     display: none;
 }
 
-#searchInput {
-    width: 100%;
+.search-input {
+    width: 50%;
     padding: 10px;
     margin-bottom: 20px;
     border: 1px solid #ddd;
     border-radius: 5px;
     font-size: 16px;
+    background-color: white;
+    color: #333;
 }
 
 .details {
