--- a/src/Table.css
+++ b/src/Table.css
@@ -15,7 +15,10 @@ body {
     border-radius: 8px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
+    overflow-y: auto;
+    
 }
+
 
 .logo {
     max-width: 200px;
@@ -34,16 +37,18 @@ table {
     border-collapse: collapse;
 }
 
+
 th,
 td {
     padding: 12px;
     text-align: left;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 2px solid #8b4513;
 }
 
 th {
     background-color: #8b4513;
     color: white;
+    box-shadow: 5px 0px 6px rgba(0, 0, 0, 0.1); /* 添加阴影 */
 }
 
 .expand-btn {
