--- a/src/Table.css
+++ b/src/Table.css
@@ -336,9 +336,17 @@ input[type="date"] {
     min-width: 250px;
 }
 
+.date-filter-labels {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+}
+
 .date-filter span {
     display: block;
-    margin-bottom: 8px;
     font-weight: 500;
 }
 
@@ -353,6 +361,7 @@ input[type="date"] {
     border: 1px solid #ddd;
     border-radius: 4px;
     flex: 1;
+    background-color: #8b4513;
 }
 
 .clear-dates-btn {
