--- a/src/Table.css
+++ b/src/Table.css
@@ -18,7 +18,6 @@ body {
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
     overflow-y: auto;
-
 }
 
 
@@ -225,7 +224,7 @@ td input {
 }
 
 .details-section textarea {
-    width: 100%;
+    width: 95%;
     padding: 8px;
     border: 1px solid #ddd;
     border-radius: 4px;
@@ -267,10 +266,10 @@ td input {
 }
 
 input[type="date"] {
-    padding: 4px 8px;
+    /* padding: 4px 8px; */
     border: 1px solid #ddd;
     border-radius: 4px;
-    margin-left: 8px;
+    /* margin-left: 8px; */
 }
 
 .details-section input[type="checkbox"] {
@@ -615,7 +614,7 @@ input[type="date"] {
     }
     
     .details-section textarea {
-        width: 100%;
+        width: 95%;
         padding: 8px;
         border: 1px solid #ddd;
         border-radius: 4px;
@@ -900,4 +899,19 @@ input[type="date"] {
     .results-count {
         order: 3; /* Move to bottom on mobile */
     }
+}
+
+.modal-body input {
+    padding: 8px 2px !important;
+}
+
+#notes {
+    width: 95%;
+}
+
+.radio-group {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
 }
