--- a/src/Table.css
+++ b/src/Table.css
@@ -356,7 +356,7 @@ input[type="date"] {
     html, body {
         max-width: 768px;
         overflow-x: hidden; /* 隐藏横向溢出 */
-        font-size: 12px; /* 设置根元素的字体大小 */
+        font-size: 14px; /* 设置根元素的字体大小 */
         margin: 0;
         padding: 0;
         max-width: 768px;
@@ -779,6 +779,18 @@ input[type="date"] {
 
 /* For mobile screens */
 @media (max-width: 768px) {
+
+    .container {
+        max-width: 95%;
+        margin: 2%;
+        background: white;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        text-align: center;
+        overflow-y: auto;
+    }
+
     .action-buttons {
         width: 100%;
         align-items: flex-end;
@@ -854,7 +866,7 @@ input[type="date"] {
 .table-controls {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: center; 
     margin: 20px 0;
 }
 
@@ -874,6 +886,7 @@ input[type="date"] {
 .add-prospect-btn:hover, 
 .expand-all-btn:hover {
     background-color: #5a2d0c;
+
 }
 
 .add-prospect-btn:disabled {
@@ -914,4 +927,18 @@ input[type="date"] {
     justify-content: center;
     align-items: center;
     gap: 10px;
+}
+
+.top-actions {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    margin: 20px 0;
+}
+
+.action-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items:center;
 }
